tests/ui/empty_tag.stderr
error: Invalid @tag annotation format
       help: expected '@tag <tag_name>'
       note: example '@tag users'
  --> tests/ui/empty_tag.rs:10:1
   |
10 | /// @tag
   | ^^^^^^^^
